Started lit review

--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -1,23 +1,17 @@
 \documentclass{article}
 \usepackage[margin=30mm]{geometry}
-\usepackage{graphicx}
-\usepackage{listings}
-\lstset{
-  basicstyle=\ttfamily,
-  columns=fullflexible,
-  frame=single,
-  breaklines=true,
-  postbreak=\mbox{{$\hookrightarrow$}\space},
-}
+\usepackage[comma]{natbib}
+\bibliographystyle{agsm}
+
 \begin{document}
 \title{Using Facial Recognition to gather Social Media Intelligence}
 \author{Jack Neilson}
 \maketitle
 \newpage
-\obeylines
 \section{Literature Review}
 \subsection{Background}
 \subsubsection{SOCMINT}
+asdfasdf \citep{criminalvshumint}
 
 \subsubsection{Uses of SOCMINT}
 
@@ -60,4 +54,5 @@ Overview and current applications
 
 \subsubsection{Unconstrained Facial Recognition}
 
+\bibliography{citations}
 \end{document}
