Finished added citations

--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -10,6 +10,8 @@
 \newpage
 \section{Literature Review}
 \subsection{Background}
+\todo{}
+
 \subsubsection{SOCMINT}
 asdfasdf \citep{criminalvshumint}
 
