--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -125,3 +125,116 @@ volume = {2012},
 booktitle = {Computer Fraud & Security}
 }
 
+@inproceedings{adversarialfacialrecog,
+author = {Sharif, Mahmood and Bhagavatula, Sruti and Bauer, Lujo and Reiter, Michael K.},
+title = {Accessorize to a Crime: Real and Stealthy Attacks on State-of-the-Art Face Recognition},
+booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+series = {CCS '16},
+year = {2016},
+isbn = {978-1-4503-4139-4},
+location = {Vienna, Austria},
+pages = {1528--1540},
+numpages = {13},
+url = {http://doi.acm.org/10.1145/2976749.2978392},
+doi = {10.1145/2976749.2978392},
+acmid = {2978392},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {adversarial machine learning, face detection, face recognition, neural networks},
+}
+
+@inproceedings{faceregiondescriptors,
+  title={Fusing robust face region descriptors via multiple metric learning for face recognition in the wild},
+  author={Cui, Zhen and Li, Wen and Xu, Dong and Shan, Shiguang and Chen, Xilin},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3554--3561},
+  year={2013}
+}
+
+@article{cloudcomputingsocmintfacerecog,
+  title={Face recognition for social media with mobile cloud computing},
+  author={Indrawan, Prasetyawidi and Budiyatno, Slamet and Ridho, Nur Muhammad and Sari, Riri Fitri},
+  journal={International Journal on Cloud Computing: Services and Architecture},
+  volume={3},
+  number={1},
+  pages={23--35},
+  year={2013}
+}
+
+@inproceedings{socialmediafacialrecogprivacy,
+  title={Faceless person recognition: Privacy implications in social media},
+  author={Oh, Seong Joon and Benenson, Rodrigo and Fritz, Mario and Schiele, Bernt},
+  booktitle={European Conference on Computer Vision},
+  pages={19--35},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{facebookfacialrecog,
+  title={Evaluation of face recognition techniques for application to facebook},
+  author={Becker, Brian C and Ortiz, Enrique G},
+  booktitle={Automatic Face \& Gesture Recognition, 2008. FG'08. 8th IEEE International Conference on},
+  pages={1--6},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{largescalefacialrecogsocialmedia,
+  title={Toward large-scale face recognition using social network context},
+  author={Stone, Zak and Zickler, Todd and Darrell, Trevor},
+  journal={Proceedings of the IEEE},
+  volume={98},
+  number={8},
+  pages={1408--1415},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{bostonbombingcasestudy,
+  title={A case study on unconstrained facial recognition using the boston marathon bombings suspects},
+  author={Klontz, Joshua C and Jain, Anil K},
+  journal={Michigan State University, Tech. Rep},
+  volume={119},
+  number={120},
+  pages={1},
+  year={2013}
+}
+
+@article{poserobustfacialrecog,
+  title={Pose-robust recognition of low-resolution face images},
+  author={Biswas, Soma and Aggarwal, Gaurav and Flynn, Patrick J and Bowyer, Kevin W},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={35},
+  number={12},
+  pages={3037--3049},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{facialrecogpolitics,
+  title={Picturing algorithmic surveillance: The politics of facial recognition systems},
+  author={Introna, Lucas and Wood, David},
+  journal={Surveillance \& Society},
+  volume={2},
+  number={2/3},
+  year={2002}
+}
+
+@inproceedings{unconstrainedfacialrecogbenchmark,
+  title={Pushing the frontiers of unconstrained face detection and recognition: IARPA Janus Benchmark A},
+  author={Klare, Brendan F and Klein, Ben and Taborsky, Emma and Blanton, Austin and Cheney, Jordan and Allen, Kristen and Grother, Patrick and Mah, Alan and Jain, Anil K},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1931--1939},
+  year={2015}
+}
+
+@article{facialrecogidentifyingpoi,
+  title={Unconstrained face recognition: Identifying a person of interest from a media collection},
+  author={Best-Rowden, Lacey and Han, Hu and Otto, Charles and Klare, Brendan F and Jain, Anil K},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={9},
+  number={12},
+  pages={2144--2157},
+  year={2014},
+  publisher={IEEE}
+}
