Finished sources, added intro to lit review

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -115,7 +115,7 @@ year = {2013},
 howpublished = {Leaked to several newspapers by Edward Snowden in late 2013}
 }
 
-@article{article,
+@article{spearphishing,
 author = {Parmar, Bimal},
 year = {2012},
 month = {01},
