More work on lit review, added papers

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -238,3 +238,28 @@ keywords = {adversarial machine learning, face detection, face recognition, neur
   year={2014},
   publisher={IEEE}
 }
+
+@article{socialmediacontent,
+author = {Sonia Livingstone},
+title ={Taking risky opportunities in youthful content creation: teenagers' use of social networking sites for intimacy, privacy and self-expression},
+journal = {New Media \& Society},
+volume = {10},
+number = {3},
+pages = {393-411},
+year = {2008},
+doi = {10.1177/1461444808089415},
+URL = {https://doi.org/10.1177/1461444808089415},
+eprint = {https://doi.org/10.1177/1461444808089415}
+}
+
+@article{humintinterrogators,
+  title={Structured interviews of experienced HUMINT interrogators},
+  author={Russano, Melissa B and Narchet, Fadia M and Kleinman, Steven M and Meissner, Christian A},
+  journal={Applied cognitive psychology},
+  volume={28},
+  number={6},
+  pages={847--859},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
