First draft of lit review intro

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -263,3 +263,16 @@ eprint = {https://doi.org/10.1177/1461444808089415}
   publisher={Wiley Online Library}
 }
 
+@article{facialrecogsecurityvsprivacy,
+author={K. W. Bowyer},
+journal={IEEE Technology and Society Magazine},
+title={Face recognition technology: security versus privacy},
+year={2004},
+volume={23},
+number={1},
+pages={9-19},
+keywords={biometrics (access control);data privacy;face recognition;surveillance;biometric technology;data security;face recognition system;person identification;privacy protection;social impact;video surveillance;Airports;Biometrics;Cameras;Constitution;Face recognition;Law enforcement;National security;Privacy;Terrorism;Video surveillance},
+doi={10.1109/MTAS.2004.1273467},
+ISSN={0278-0097},
+month={Spring}
+}
