--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -29,12 +29,15 @@ As previously stated, SOCMINT has seen some emergent use particularly in the sec
 \subsubsection{Facial Recognition}
 Facial recognition is a much more mature area of research than SOCMINT with many examples of industry usage. Facebook uses facial recognition to automate "tagging" photos with the identity of the persons pictured \citep{facebookfacialrecog}, and large companies are now releasing datasets such as YouTube Faces \citep{faceregiondescriptors} in an effort to advance the field.
 
-This is not to say that facial recognition is not without controversy however, as many privacy advocates have pointed out that accurate face regonition could infringe on their right to privacy \citep{gchqmasssurveillance}. David Wood and Lucas Introne have posed that accurate facial recognition could lead to increased levels of surveillance, with no way to "opt out" \citep{facialrecogpolitics}.
-
+This is not to say that facial recognition is not without controversy however, as many privacy advocates have pointed out that accurate face regonition could infringe on their right to privacy \citep{gchqmasssurveillance}. David Wood and Lucas Introne have posed that accurate facial recognition could lead to increased levels of surveillance, with no way to "opt out" \citep{facialrecogpolitics}\citep{facialrecogsecurityvsprivacy}.
 
 \subsubsection{Uses of Facial Recognition}
+Facial recognition has many practical applications that are already being realised. As noted previously, Facebook uses facial recognition when "tagging" photos. This is presumably done to allow advertisers to more effectively target individual users - for example, a person identified in a photo with a barbeque may receive adverts for propane gas.
+
+Facial recognition is also enjoying a heavy amount of attention from the security services due to it's use in identifying persons of interest. Case studies have been performed using images released to the public to ascertain how effective facial recognition is when looking for a specific person. In particular, Joshua Klontz and Anil Jain performed a case study using the images of the "Boston Bombers" against a set of test data \citep{bostonbombingcasestudy}. Their approach was successful in recognising one of the perpetrators from a picture taken from his social media account (See appendix \ref{appendix:bostonbomber}).
 
 \subsubsection{Constrained vs Unconstrained}
+While facial recognition software has come a long way, achieving accuracy rates of up to 99% on small, consistent data sets \citep{facialrecogidentifyingpoi}, it is still in it's infancy when it comes to identifying people in "unconstrained" images. Images taken in the wild may have large variations in pose, facial occlusion and ambient lighting. This makes it difficult to identify facial features or markers (such as iris distinace, nasal distance, blemishes) which in turn has a negative impact on accuracy rates \citep{unconstrainedfacialrecogbenchmark}. When looking at applications of face recognition software with unconstrained datasets, matches are typically achieved when the test image has similar pose, occlusion and lighting as the sample image (See appendix \ref{appendix:bostonbomber}).
 
 \subsection{Theory}
 \subsubsection{Prior Work}
@@ -79,6 +82,11 @@ This is not to say that facial recognition is not without controversy however, a
 \label{appendix:threatgraph}
 \includegraphics[width=\linewidth]{res/threat_graph.png}
 Graph of insider threat factors \citep{behaviourdetection}.
+
+\section{"Boston Bomber" Identification}
+\label{appendix:bostonbomber}
+\includegraphics[width=\linewidth]{res/boston_bomber.png}
+Table of potential matches, note the correct identification from the picture taken from social media with similar pose and lighting \citep{bostonbombingcasestudy}.
 
 \end{appendices}
 
