--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -276,3 +276,9 @@ doi={10.1109/MTAS.2004.1273467},
 ISSN={0278-0097},
 month={Spring}
 }
+
+@article{socmintvshumint,
+  title={From SOCMINT to Digital Humint: re-frame the use of social media within the Intelligence Cycle},
+  author={Lombardi, Marco and ROSENBLUM, Todd and BURATO, Alessandro},
+  year={2015}
+}
