lit review, papers

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -277,8 +277,15 @@ ISSN={0278-0097},
 month={Spring}
 }
 
-@article{socmintvshumint,
-  title={From SOCMINT to Digital Humint: re-frame the use of social media within the Intelligence Cycle},
-  author={Lombardi, Marco and ROSENBLUM, Todd and BURATO, Alessandro},
-  year={2015}
+@article{clandestinehumint,
+  title={The art of meddling: a theoretical, strategic and historical analysis of non-official covers for clandestine Humint},
+  author={Musco, Stefano},
+  journal={Defense \& Security Analysis},
+  volume={33},
+  number={4},
+  pages={380--394},
+  year={2017},
+  publisher={Taylor \& Francis}
 }
+
+
