--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -48,7 +48,7 @@ While facial recognition software has come a long way, achieving accuracy rates 
 
 
 \subsubsection{HUMINT}
-Human intelligence pertains to the gathering of intelligence from individual human subjects, typically through interview or interrogation. 
+Human intelligence pertains to the gathering of intelligence from individual human subjects. Information may be divulged non-consentually e.g. in the case of interrogation \citep{\todo{put shit here}}.
 
 \subsubsection{Social Engineering}
 
