Lit review, papers

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -288,4 +288,22 @@ month={Spring}
   publisher={Taylor \& Francis}
 }
 
+@article{humintni,
+  title={Professionalizing clandestine military intelligence in Northern Ireland: creating the Special Reconnaissance Unit},
+  author={Charters, David A},
+  journal={Intelligence and National Security},
+  volume={33},
+  number={1},
+  pages={130--138},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
 
+@incollection{humintcyberage,
+  title={‘The More Things Change’: HUMINT in the Cyber Age},
+  author={Gioe, David V},
+  booktitle={The Palgrave Handbook of Security, Risk and Intelligence},
+  pages={213--227},
+  year={2017},
+  publisher={Springer}
+}
