--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -24,8 +24,6 @@ While traditional human intelligence (HUMINT) focuses on building rapport and a 
 \subsubsection{Uses of SOCMINT}
 As previously stated, SOCMINT has seen some emergent use particularly in the security services. The Greek Ministry of Defence has developed a framework to identify individuals fitting certain psychiatric profiles from their social media accounts to allow for early identification of potential insider threats \citep{behaviourdetection}. By identifying factors that multiple intelligence agencies agree make a person more likely to pose an insider threat or negatively influence society (See appendix \ref{appendix:threatgraph}), they were able to map usage habits (intensity, content, popularity) to these factors to draw conclusions about clusters of users. So far, the research has been helpful in insider threat prevention, delinquent behaviour prediction and forensic analysis support.
 
-\todo{Maybe write about PRISM?}
-
 \subsubsection{Facial Recognition}
 Facial recognition is a much more mature area of research than SOCMINT with many examples of industry usage. Facebook uses facial recognition to automate "tagging" photos with the identity of the persons pictured \citep{facebookfacialrecog}, and large companies are now releasing datasets such as YouTube Faces \citep{faceregiondescriptors} in an effort to advance the field.
 
@@ -48,7 +46,13 @@ While facial recognition software has come a long way, achieving accuracy rates 
 
 
 \subsubsection{HUMINT}
-Human intelligence pertains to the gathering of intelligence from individual human subjects. Information may be divulged non-consentually e.g. in the case of interrogation \citep{\todo{put shit here}}.
+Human intelligence (HUMINT) pertains to the gathering of intelligence from individual human subjects. Information may be divulged non-consensually e.g. in the case of interrogation \citep{criminalvshumint}, or consensually in the case of clandestine information gathering \citep{clandestinehumint}. 
+
+Non-consensual information gathering via interview or interrogation has only recently become a subject of study for the general public \citep{humintinterrogators}. 
+
+Consensual information gathering sits in a much more grey area. Presenting yourself as somebody else may not be illegal depending on the circumstances, however it poses several moral questions. Clandestine intelligence gathering is still an extremely effective strategy, particularly when attempting to gather sensitive information which may be more heavily protected e.g. airgapped, firewalled \citep{clandestinehumint}. This makes it attractive during wartime or times of civil unrest \citep{humintni}\citep{humintcyberage}
+
+Using a human intelligence approaches when gathering information has several downsides. It is a high risk strategy, as should a person be found out the consequences can be severe \citep{humintni}. The potential reward of sensitive information may be deemed to not be worth the risk. It goes without saying that HUMINT does not scale particularly well - it is a useful tool when attempting to extract information from a single person or small group, but it is much less useful when gathering information about larger groups. It relies on trust being built and may be ineffective when attempting to gather information from targets trained in tradecraft \citep{humintni}\citep{clandestinehumint}\citep{humintcyberage}.
 
 \subsubsection{Social Engineering}
 
@@ -61,6 +65,7 @@ Human intelligence pertains to the gathering of intelligence from individual hum
 \subsubsection{Accessibility of Data}
 
 \subsubsection{Uses}
+\todo{PRISM}
 
 \subsubsection{Challenges and Constraints}
 
