--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -69,6 +69,12 @@ Using a human intelligence approaches when gathering information has several dow
 
 \subsubsection{Challenges and Constraints}
 
+
+
+
+
+
+
 \subsection{Facial Recognition}
 \subsubsection{Current Applications}
 
@@ -79,6 +85,8 @@ Using a human intelligence approaches when gathering information has several dow
 \subsubsection{Recent Advances}
 
 \subsubsection{Unconstrained Facial Recognition}
+
+\subsubsection{Application to Social Media}
 
 \newpage
 \bibliography{citations}
