--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -307,3 +307,13 @@ month={Spring}
   year={2017},
   publisher={Springer}
 }
+
+@article{advancedsocialengineering,
+  title={Advanced social engineering attacks},
+  author={Krombholz, Katharina and Hobel, Heidelinde and Huber, Markus and Weippl, Edgar},
+  journal={Journal of Information Security and applications},
+  volume={22},
+  pages={113--122},
+  year={2015},
+  publisher={Elsevier}
+}
