--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -115,7 +115,7 @@ year = {2013},
 howpublished = {Leaked to several newspapers by Edward Snowden in late 2013}
 }
 
-@article{spearphishing,
+@article{spearphishingresults,
 author = {Parmar, Bimal},
 year = {2012},
 month = {01},
@@ -317,3 +317,29 @@ month={Spring}
   year={2015},
   publisher={Elsevier}
 }
+
+@book{mitnick,
+  title={The art of deception: Controlling the human element of security},
+  author={Mitnick, Kevin D and Simon, William L},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
+@misc{cia13yearold,
+title = {The CIA director was hacked by a 13-year-old, but he still wants your data},
+author = {Trevor Timm},
+year = {2015},
+howpublished = {Published in the Guardian newspaper}
+}
+
+@article{spearphishing,
+  title={Going spear phishing: Exploring embedded training and awareness},
+  author={Caputo, Deanna D and Pfleeger, Shari Lawrence and Freeman, Jesse D and Johnson, M Eric},
+  journal={IEEE Security \& Privacy},
+  volume={12},
+  number={1},
+  pages={28--38},
+  year={2014},
+  publisher={IEEE}
+}
+
