--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -110,4 +110,54 @@ Table of potential matches, note the correct identification from the picture tak
 
 \end{appendices}
 
+\section{Methodology}
+\subsection{Overview}
+The software implemented will be in the form of a python command line program, which allows users to specify an input image and data set to check it against. Additional identifying information such as name, date of birth etc. should also be utilised if given. The data sets the software references must come from social networking websites (or in the case of this proof of concept, a data set which is an accurate representation). 
+
+As its output, the software must show the 5 most similar faces in the dataset to allow for human verification. They should be presented with information that was gained from their social media profiles such as age, gender, name etc., as well as the similarity to the test image.
+
+\subsection{Functional Requirements}
+\subsubsection{Face Recognition}
+The software must implement a method of facial recognition, to rank a set of faces by similarity to a given test image. The test face must be extracted from the input image. The top 5 matches should be outputted, along with relevant identifying information.
+
+\subsubsection{Social Media Integration}
+The software must have the ability to use social networking websites as it's dataset when comparing a test face. It would be desirable for the software to have the capability to use other identifying information alongside the test image to narrow the search space. Due to limited time and resources, test accounts may be used as a proof of concept.
+
+\subsubsection{Headless}
+The software should be able to function without a GUI, as due to the extremely large dataset deployment to a large server or cloud may be required.
+
+\subsubsection{Multithreaded}
+Where applicable, the software should make full use of parallelisation to increase it's speed and resource utilisation. This is particularly important when working with large data sets.
+
+\subsubsection{Deployment}
+The software should make use of packaging systems, notably pip, to allow for easy deployment.
+
+\subsubsection{Facial Recognition Libraries}
+Due to time constrants, reimplementing facial recognition capabilities is not feasible. Therefore, the software should make use of already existing facial recognition libraries, in particular dlib or OpenCV.
+
+\subsubsection{Language}
+The software should be written in Python to allow for easy use of face recognition programs and rapid prototyping.
+
+\subsubsection{Time Spent}
+The software must be able to complete the above task in the same time or less than a human.
+
+\subsubsection{Documentation}
+The software should have at a minimum a man page and usage information. More documentation would be beneficial.
+
+\subsection{Non-functional Requirements}
+\subsubsection{Accuracy}
+The software should have a \textit{relatively} high success rate when identifying a person from a social media collection. Note that typical facial reocgnition performance in unconstrained environments achieve a maximum success rate of ~30\%.
+
+\subsubsection{Usefulness}
+The information gained by using the software should help when crafting prior-knowledge attacks, increasing their effectiveness.
+
+\subsubsection{Cross-Platform}
+The software must be cross-platform to allow for easy deployment to servers or a cloud.
+
+\subsubsection{Imprecision Tolerance}
+The software should attempt a best guess when using an input image with less than ideal pose, facial occlusion or lighting. Inferior results when given a test image like this are acceptable to a degree.
+
+\subsubsection{Usability}
+The software is being developed for use by information security professionals in the form of a command line tool. This is ubiquitous in the industry, so no more than a cursory glance over the usage information should be needed to begin using the tool.
+
 \end{document}
