Small amendment to requirements spec

--- a/doc/report/literature_review.tex
+++ b/doc/report/literature_review.tex
@@ -114,7 +114,7 @@ Table of potential matches, note the correct identification from the picture tak
 \subsection{Overview}
 The software implemented will be in the form of a python command line program, which allows users to specify an input image and data set to check it against. Additional identifying information such as name, date of birth etc. should also be utilised if given. The data sets the software references must come from social networking websites (or in the case of this proof of concept, a data set which is an accurate representation). 
 
-As its output, the software must show the 5 most similar faces in the dataset to allow for human verification. They should be presented with information that was gained from their social media profiles such as age, gender, name etc., as well as the similarity to the test image.
+As its output, the software must show the 5 most similar faces in the dataset to allow for human verification. They should be presented with information that was gained from their social media profiles such as age, gender, name etc., as well as the similarity to the test image. In the case that the software is being ran headlessly, the results should be available in a file format including an image of the match and a representation of their social media profile.
 
 \subsection{Functional Requirements}
 \subsubsection{Face Recognition}
