Updated records, built report

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -110,6 +110,7 @@ Table of potential matches, note the correct identification from the picture tak
 
 \end{appendices}
 
+\newpage
 \section{Methodology}
 \subsection{Overview}
 The software implemented will be in the form of a python command line program, which allows users to specify an input image and data set to check it against. Additional identifying information such as name, date of birth etc. should also be utilised if given. The data sets the software references must come from social networking websites (or in the case of this proof of concept, a data set which is an accurate representation). 
@@ -160,4 +161,10 @@ The software should attempt a best guess when using an input image with less tha
 \subsubsection{Usability}
 The software is being developed for use by information security professionals in the form of a command line tool. This is ubiquitous in the industry, so no more than a cursory glance over the usage information should be needed to begin using the tool.
 
+
+\section{Implementation}
+\section{Testing}
+\section{Results}
+\section{Evaluation}
+\section{Conclusion}
 \end{document}
